# priora

./: .gitignore  Caddyfile.snippet  README.md  agent.md  deploy.env.example  dev
doc/: backlog-potenciacion.md  despliegue.md  especificaciones.md
doc/propuestas-diseno/: index.html  propuesta-a-comunidad.html  propuesta-b-editorial.html  propuesta-c-dashboard.html
priora-api/: .dockerignore  .env.example  .env.production.example  Cargo.toml  Dockerfile
priora-api/migrations/: 001_initial.sql  002_categories.sql  003_namespaces.sql  004_barrio_test.sql  005_namespace_membership.sql  006_proposal_events.sql  007_invite_code.sql  008_namespace_description_hidden.sql  009_proposal_images.sql  010_platform_settings.sql
priora-api/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  membership.rs  models.rs  ranking.rs
priora-api/src/handlers/: activity.rs  auth.rs  categories.rs  comments.rs  membership.rs  mod.rs  namespaces.rs  proposals.rs  rankings.rs  settings.rs  stats.rs  uploads.rs  users.rs
priora-api/tests/: bdd.rs
priora-api/tests/features/: admin_settings.feature  membership_approval.feature
priora-web/: .dockerignore  .env.production.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
priora-web/src/: App.jsx  index.css  routes.js
priora-web/src/api/: client.js
priora-web/src/components/: ImpersonationHandler.jsx  InviteBanner.jsx  Layout.jsx  LogoField.jsx  MembershipBanner.jsx  NamespaceLayout.jsx  ProposalCard.jsx  ProposalImagesField.jsx  SettingsLayout.jsx  StatusBadge.jsx  TutorialOverlay.jsx
priora-web/src/context/: AuthContext.jsx  NamespaceContext.jsx
priora-web/src/pages/: AdminSettings.jsx  AuthCallback.jsx  CompleteProfile.jsx  CreateProposal.jsx  EditProposal.jsx  Home.jsx  Login.jsx  NamespacePicker.jsx  Prioritize.jsx  Profile.jsx  ProposalDetail.jsx
scripts/: backup-db.sh  deploy.sh  dev.sh  set-role.sh
